--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
  <a href="lineas y listas.html"><font="Vanessa" size="6"><center>Práctica 2:Listas y líneas</center></font></a><br>
  <a href="Imágenes.html"><font="Vanessa" size="6"><center>Práctica3:Imágenes</center></font></a><br>
  <a href="Multimedia.html"><font="Vanessa" size="6"><center>Práctica 4:Multimedia</center></font></a></body><br>
- <a href="Hipervinculos.html"><font="Vanessa" size="6"><center>Práctica 5:Hipervinculos</center></font></center><br><br>
+ <a href="Hipervinculos.html"><font="Vanessa" size="6"><center>Práctica 5:Hipervinculos</center></font><br>
+<a href="tablas.html"><font="Vanessa" size="6"><center>Practica 6:Tablas</center></font><br><br>
 <a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif"></center></a>
+
 
 
 </html>
