--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
  <a href="Multimedia.html"><font="Vanessa" size="6"><center>Práctica 4:Multimedia</center></font></a></body><br>
  <a href="Hipervinculos.html"><font="Vanessa" size="6"><center>Práctica 5:Hipervinculos</center></font><br>
 <a href="tablas.html"><font="Vanessa" size="6"><center>Practica 6:Tablas</center></font><br><br>
-<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif"></center></a>
-
-
+<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="300" height="200"></center></a>
+<a href="uso de internet.html"><font="Vanessa" size="6"><center>Uso de internet en Mexico</center></font><br>
 
 </html>
