--- a/uso de internet.html
+++ b/uso de internet.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <title>Uso del Internet en M&eacutexico</title></head>
-    <body bgcolor="lemonchiffon">
+    <body bgcolor="lightpink">
         <h1><center>Uso del internet en México.</center></h1> 
-
-     <img src="mexico.png" width="=200" height="50" align="middle"><a href="espanol.html"><font size="4" face="Times New Roman" color="black"> 
+<center>
+     <img src="mexico.png" width="=200" height="50" align="middle"><a href="espanol.html"><font size="4" face="Vanessa" color="black"> 
 Consulta la informaci&oacuten estad&iacutestica sobre el uso del internet en M&eacutexico</font></a><br><br>
 
-     <img src="eu.png" width="100" height="50" align="middle"><a href="ingles.html"><font size="4" face="Times New Roman" color="black"> Consult the stadistical information on the use of the internet in Mexico</font></a>        
-
+     <img src="eu.png" width="100" height="50" align="middle"><a href="ingles.html"><font size="4" face="Vanessa" color="black"> Consult the stadistical information on the use of the internet in Mexico</font></a>        
+        </center>
 
     
