--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 </head>
 <body background="heart.jpg">
 
-<font face="Vanessa" size="15"><center>Practicas daaay</b></center></font><br><br>
+<font face="Vanessa" size="15"><center>Temas de HTML by daaay</b></center></font><br><br>
  <a href="Estructura Básica.html"><font="Vanessa" size="6"><center>Práctica 1:Estructura basica y texto</center></font></a><br>
  <a href="lineas y listas.html"><font="Vanessa" size="6"><center>Práctica 2:Listas y líneas</center></font></a><br>
  <a href="Imágenes.html"><font="Vanessa" size="6"><center>Práctica3:Imágenes</center></font></a><br>
  <a href="Multimedia.html"><font="Vanessa" size="6"><center>Práctica 4:Multimedia</center></font></a></body><br>
  <a href="Hipervinculos.html"><font="Vanessa" size="6"><center>Práctica 5:Hipervinculos</center></font><br>
 <a href="tablas.html"><font="Vanessa" size="6"><center>Practica 6:Tablas</center></font><br><br>
-<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="300" height="200"></center></a>
+	<font face="Vanessa" size="10"><center>Pr&aacutecticas de daay</b></center></font><br><br>
+	 <a href="continentes.html"><font="Vanessa" size="6"><center>1: Continentes</center></font><br><br>
+<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="100" height="100"></center></a>
 <a href="uso de internet.html"><font="Vanessa" size="6"><center>Uso de internet en Mexico</center></font><br>
 
 </html>
