--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <font face="Vanessa" size="8"><center>Pr&aacutecticas by daay</b></center></font><br>
  <a href="uso de internet.html"><font="Vanessa" size="6"><center>Uso de internet en Mexico</center></font><br>
-<a href="continentes.html"><font="Vanessa" size="6"><center>1: Continentes</center></font><br><br>	
+<a href="continentes.html"><font="Vanessa" size="6"><center>Continentes</center></font><br><br>	
 <a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="150" height="150"></center></a>
 
 </html>
