--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
  <a href="Imágenes.html"><font="Vanessa" size="10"><center>Práctica3:Imágenes</center></font></a><br>
  <a href="Multimedia.html"><font="Vanessa" size="10"><center>Práctica 4:Multimedia</center></font></a></body><br>
  <a href="Hipervinculos.html"><font="Vanessa" size="10"><center>Práctica 5:Hipervinculos</center></font></a><br>
- <a href="tablas.html"><font="Vanessa" size="10"><center>Practica 6:Tablas</center></font></a><br><br>
+ <a href="tablas.html"><font="Vanessa" size="10"><center>Practica 6:Tablas</center></font></a><br>
+<a href="frames.html"><font="Vanessa" size="10"><center>Practica 7:Frames</center></font></a><br><br>
 
 <font face="Vanessa" size="13"><center>Pr&aacutecticas by daay</b></center></font><br>
  <a href="uso de internet.html"><font="Vanessa" size="10"><center>Uso de internet en Mexico</center></font><br>
