--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <html>
 <head>
-	<title>Prácticas compu</title>
+<title>Frame Index</title>
 </head>
-<body background="heart.jpg">
+<frameset rows="10%,80%,*">
+<frame src="verde.html">
 
-<font face="Vanessa" size="15"><center>Temas de HTML by daaay</b></center></font><br><br>
- <a href="Estructura Básica.html"><font="Vanessa" size="10"><center>Práctica 1:Estructura basica y texto</center></font></a><br>
- <a href="lineas y listas.html"><font="Vanessa" size="10"><center>Práctica 2:Listas y líneas</center></font></a><br>
- <a href="Imágenes.html"><font="Vanessa" size="10"><center>Práctica3:Imágenes</center></font></a><br>
- <a href="Multimedia.html"><font="Vanessa" size="10"><center>Práctica 4:Multimedia</center></font></a></body><br>
- <a href="Hipervinculos.html"><font="Vanessa" size="10"><center>Práctica 5:Hipervinculos</center></font></a><br>
- <a href="tablas.html"><font="Vanessa" size="10"><center>Practica 6:Tablas</center></font></a><br>
-<a href="frames.html"><font="Vanessa" size="10"><center>Practica 7:Frames</center></font></a><br><br>
+<frameset cols="20%,*">
+<frame src="menuu.html">
+<frame src="hachi.html" name="Principal">
+</frameset>
 
-<font face="Vanessa" size="13"><center>Pr&aacutecticas by daay</b></center></font><br>
- <a href="uso de internet.html"><font="Vanessa" size="10"><center>Uso de internet en Mexico</center></font><br>
-<a href="continentes.html"><font="Vanessa" size="10"><center>Continentes</center></font><br><br>	
-<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="150" height="150"></center></a>
+<frame src="nombre.html">
 
+</frameset>
 </html>
