--- a/Hipervinculos.html
+++ b/Hipervinculos.html
@@ -7,7 +7,7 @@
   <h2>Hiperv&iacutenculos externos</h2>
     <a href="https://www.cecyt3.ipn.mx"/>Voca 3</a><br>
     <a href="https://store.taylorswift.com/">Tiendita de mami Taylor</a><br>
-    <a href="https://skzoostore.com/">Tiendita de skzoo</a><br><br>
+    <a href="https://skzoostore.com/">Tiendita de skzoo</a><br>
     <a href="http://www.google.com/"><img src="google.jpg"</a>
    <br>
    </a>
