--- a/menuu.html
+++ b/menuu.html
@@ -7,9 +7,9 @@
 <ul>
   <li><a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a></li>
   <li><a href="lineas y listas.html" target="Principal">Listas y Líneas</a></li>
-  <li><a href="multimedia.html" target="Principal">Multimedia</a></li>
+  <li><a href="Multimedia.html" target="Principal">Multimedia</a></li>
   <li><a href="Imágenes.html" target="Principal">Imágenes</a></li>
-   <li><a href="hipervinculos.html" target="Principal">Hipervínculos</a></li>
+   <li><a href="Hipervinculos.html" target="Principal">Hipervínculos</a></li>
   <li><a href="tablas.html" target="Principal">Tablas</a></li>
 <li><a href="frames.html" target="Principal">Frames</a></li>
 </ul>
