--- a/menuu.html
+++ b/menuu.html
@@ -16,7 +16,8 @@
 
 <h3>Prácticas</h3>
 <ul>
-<li><a href="continentes.html" target="Principal">Práctica Continentes</a></li>
+<li><a href="continentes.html" target="Principal">Práctica Continentes</a></li><br>
+  <li><a href="ani.html" target="Principal">Practica Animales</a></li><br>
 </ul>
 
 <h3>Colores</h3>
