--- a/menuu.html
+++ b/menuu.html
@@ -17,7 +17,7 @@
 <h3>Prácticas</h3>
 <ul>
 <li><a href="continentes.html" target="Principal">Práctica Continentes</a></li><br>
-  <li><a href="Animales.html" target="Principal">Practica Animales</a></li>
+  <li><a href="Animales.html" target="Principal">Practica Animales</a></li><br>
   <li><a href="triangulos.html" target="Principal">Práctica Triángulos</a></li><br>
 </ul>
 
