--- a/pin.html
+++ b/pin.html
@@ -14,7 +14,7 @@
 
 <img src="pinguinopin.jpg" width="100" height="100" align="bottom">Pinguino (abajo)<br>
 
-<p align="right">Sylvanian<img src="pinguinopin.jpg" width="100" height="100">Pingüino (abajo)</p><br>
+<p align="right">Pinguino<img src="pinguinopin.jpg" width="100" height="100">Pingüino (abajo)</p><br>
 
 <img src="pinguinopin.jpg" width="100" height="100" align="top">Pingüino (arriba)<br>
 
