--- a/Animales.html
+++ b/Animales.html
@@ -4,7 +4,7 @@
 
 <frameset rows="15%,*">
 	<frame src="menu animales.html">
-	<frame src="ani.html" name="Principal1">
+	<frame src="ani.html" name="Central">
 </frameset>
 
 </frameset>
