--- a/Animales.html
+++ b/Animales.html
@@ -2,10 +2,12 @@
 <html>
 <head><tItle>Animales</title></head>
 
-<frameset rows="15%,*">
+<frameset rows="20%,*">
 	<frame src="menu animales.html">
-	<frame src="ani.html" name="paw">
+	<frames cols="20%,*>
+	<frame src="ani.html" name="tt">
 </frameset>
+	
 
 </frameset>
 </html>
