--- a/Animales.html
+++ b/Animales.html
@@ -1,7 +1,7 @@
 <html>
 <head><tItle>Animales</title></head>
 
-<frameset rows="20%,*">
+<frameset rows="30%,70%,*">
 <frame src="menu animales.html">
 <frame src="ani.html" name="tt">
 </frameset>
