--- a/menu animales.html
+++ b/menu animales.html
@@ -10,11 +10,11 @@
 <th colspan=5><center><h4>Mis animales favoritos<br>Nava Mendez Dayana<br></center></h4></td>
 </tr>
 <tr>
-<th><a href="mariposa.html" target="Principal">Mariposa</a></th>
-<th><a href="leones.html" target="Principal">León</a></th>
-<th><a href="pin.html" target="Principal">Pingüino</a></th>
-<th><a href="aguilaa.html" target="Principal">Águila</a></th>
-<th><a href="elefantes.html" target="Principal">Elefante</a></th>
+<th><a href="mariposa.html" target="tt">Mariposa</a></th>
+<th><a href="leones.html" target="tt">León</a></th>
+<th><a href="pin.html" target="tt">Pingüino</a></th>
+<th><a href="aguilaa.html" target="tt">Águila</a></th>
+<th><a href="elefantes.html" target="tt">Elefante</a></th>
 
 </table>
 </center>
