--- a/menuu.html
+++ b/menuu.html
@@ -3,8 +3,8 @@
 <body bgcolor="#CEF6E3">
 <h2><center>Índice</center></h2>
 
-<h3>Temas Vistos</h3>
-<ul>
+<center><h3>Temas Vistos</h3>
+<ul type="circle">
   <li><a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a></li>
   <li><a href="lineas y listas.html" target="Principal">Listas y Líneas</a></li>
   <li><a href="Multimedia.html" target="Principal">Multimedia</a></li>
@@ -15,7 +15,7 @@
 </ul>
 
 <h3>Prácticas</h3>
-<ul>
+<ul type="square">
 <li><a href="continentes.html" target="Principal">Práctica Continentes</a></li><br>
   <li><a href="Animales.html" target="Principal">Practica Animales</a></li><br>
   <li><a href="triangulos.html" target="Principal">Práctica Triángulos</a></li><br>
@@ -27,6 +27,6 @@
 <li><a href="naranja.html" target="Principal">Naranja</a>
 <li><a href="azul.html" target="Principal">Azul</a>
 </ul>
-
+  </center>
 </body>
 </html>
