--- a/menuu.html
+++ b/menuu.html
@@ -4,29 +4,23 @@
 <h2><center>Índice</center></h2>
 
 <center><h3>Temas Vistos</h3>
-<ul type="circle">
-  <li><a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a></li>
-  <li><a href="lineas y listas.html" target="Principal">Listas y Líneas</a></li>
-  <li><a href="Multimedia.html" target="Principal">Multimedia</a></li>
-  <li><a href="Imágenes.html" target="Principal">Imágenes</a></li>
-   <li><a href="Hipervinculos.html" target="Principal">Hipervínculos</a></li>
-  <li><a href="tablas.html" target="Principal">Tablas</a></li>
-<li><a href="frames.html" target="Principal">Frames</a></li>
-</ul>
+  <a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a>
+  <a href="lineas y listas.html" target="Principal">Listas y Líneas</a>
+  <a href="Multimedia.html" target="Principal">Multimedia</a>
+  <a href="Imágenes.html" target="Principal">Imágenes</a>
+  <a href="Hipervinculos.html" target="Principal">Hipervínculos</a>
+  <a href="tablas.html" target="Principal">Tablas</a>
+  <a href="frames.html" target="Principal">Frames</a>
 
 <h3>Prácticas</h3>
-<ul type="square">
-<li><a href="continentes.html" target="Principal">Práctica Continentes</a></li><br>
-  <li><a href="Animales.html" target="Principal">Practica Animales</a></li><br>
-  <li><a href="triangulos.html" target="Principal">Práctica Triángulos</a></li><br>
-</ul>
+  <a href="continentes.html" target="Principal">Práctica Continentes</a><br>
+  <a href="Animales.html" target="Principal">Practica Animales</a><br>
+  <a href="triangulos.html" target="Principal">Práctica Triángulos</a><br>
 
 <h3>Colores</h3>
-<ul type="square">
-<li><a href="rosaa.html" target="Principal">Rosa</a>
-<li><a href="naranja.html" target="Principal">Naranja</a>
-<li><a href="azul.html" target="Principal">Azul</a>
-</ul>
+  <a href="rosaa.html" target="Principal">Rosa</a>
+  <a href="naranja.html" target="Principal">Naranja</a>
+  <a href="azul.html" target="Principal">Azul</a>
   </center>
 </body>
 </html>
