--- a/menuu.html
+++ b/menuu.html
@@ -4,13 +4,13 @@
 <h2><center>Índice</center></h2>
 
 <center><h3>Temas Vistos</h3>
-  <a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a><br><br>
-  <a href="lineas y listas.html" target="Principal">Listas y Líneas</a><br><br>
-  <a href="Multimedia.html" target="Principal">Multimedia</a><br><br>
-  <a href="Imágenes.html" target="Principal">Imágenes</a><br><br>
-  <a href="Hipervinculos.html" target="Principal">Hipervínculos</a><br><br>
-  <a href="tablas.html" target="Principal">Tablas</a><br><br>
-  <a href="frames.html" target="Principal">Frames</a><br><br>
+  <a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a><br>
+  <a href="lineas y listas.html" target="Principal">Listas y Líneas</a><br>
+  <a href="Multimedia.html" target="Principal">Multimedia</a><br>
+  <a href="Imágenes.html" target="Principal">Imágenes</a><br>
+  <a href="Hipervinculos.html" target="Principal">Hipervínculos</a><br>
+  <a href="tablas.html" target="Principal">Tablas</a><br>
+  <a href="frames.html" target="Principal">Frames</a><br>
 
 <h3>Prácticas</h3>
   <a href="continentes.html" target="Principal">Práctica Continentes</a><br>
@@ -18,9 +18,9 @@
   <a href="triangulos.html" target="Principal">Práctica Triángulos</a><br>
 
 <h3>Colores</h3>
-  <a href="rosaa.html" target="Principal">Rosa</a><br><br>
-  <a href="naranja.html" target="Principal">Naranja</a><br><br>
-  <a href="azul.html" target="Principal">Azul</a><br><br>
+  <a href="rosaa.html" target="Principal">Rosa</a><br>
+  <a href="naranja.html" target="Principal">Naranja</a><br>
+  <a href="azul.html" target="Principal">Azul</a><br>
   </center>
 </body>
 </html>
