--- a/menuu.html
+++ b/menuu.html
@@ -14,8 +14,9 @@
 
 <h3>Prácticas</h3>
   <a href="continentes.html" target="Principal">Práctica Continentes</a><br>
-  <a href="Animales.html" target="Principal">Practica Animales</a><br>
+  <a href="Animales.html" target="Principal">Práctica Animales</a><br>
   <a href="triangulos.html" target="Principal">Práctica Triángulos</a><br>
+  <a href="division.html" target="Principal">Práctica Ironman</a><br>
 
 <h3>Colores</h3>
   <a href="rosaa.html" target="Principal">Rosa</a><br>
