--- a/menuu.html
+++ b/menuu.html
@@ -23,7 +23,7 @@
   <a href="naranja.html" target="Principal">Naranja</a><br>
   <a href="azul.html" target="Principal">Azul</a><br><br>
   
-<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif"></center></a>
+<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="200" height="200"></center></a>
 </center>
 </body>
 </html>
