--- a/verde.html
+++ b/verde.html
@@ -3,6 +3,6 @@
 <head><title>aa</head></title>
 <h1><center><font color="white">Computación Básica II</h1></center>
 
-<body bgcolor="#DAF1DE">
+<body bgcolor="#BB8FCE">
 </body>
 </html>
