--- a/menuu.html
+++ b/menuu.html
@@ -10,7 +10,8 @@
   <a href="Imágenes.html" target="Principal">Imágenes</a><br>
   <a href="Hipervinculos.html" target="Principal">Hipervínculos</a><br>
   <a href="tablas.html" target="Principal">Tablas</a><br>
-  <a href="frames.html" target="Principal">Frames</a><br>
+  <a href="frames.html" target="Principal">Frames</a><br><br>
+  <a href="opinion.html" target="Principal">Vídeo y oinión</a><br>
 
 <h3>Prácticas</h3>
   <a href="continentes.html" target="Principal">Práctica Continentes</a><br>
@@ -23,7 +24,7 @@
   <a href="naranja.html" target="Principal">Naranja</a><br>
   <a href="azul.html" target="Principal">Azul</a><br><br>
   
-<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><img src="correo-email.gif" width="200" height="200"></center></a>
+<a href="mailto:dayananava111@gmail.com"><center>Escribeme<br><br><img src="correo-email.gif" width="200" height="300"></center></a>
 </center>
 </body>
 </html>
