--- a/menuu.html
+++ b/menuu.html
@@ -16,7 +16,7 @@
   <a href="Hipervinculos.html" target="Principal">Hipervínculos</a><br>
   <a href="tablas.html" target="Principal">Tablas</a><br>
   <a href="frames.html" target="Principal">Frames</a><br><br>
-  <a href="opinion.html" target="Principal">Vídeo y oinión</a><br>
+  <a href="opinion.html" target="Principal">Opinión</a><br>
 
 <h3>Prácticas</h3>
   <a href="continentes.html" target="Principal">Práctica Continentes</a><br>
