--- a/menuu.html
+++ b/menuu.html
@@ -2,12 +2,7 @@
 <head><title>Menu</head></title>
 <body bgcolor="#CEF6E3">
 <h2><center>Menú de Daay</center></h2>
-<br>
-<center>
-  <video width=200 height=200 autoplay muted>
-    <source src="daay.mp4" type="video/mp4">
-  </video>
-</center>
+<a href="https://akumatizados.github.io/" target="chin"><img src="gato.png" width=40 height=40 align="right"></a><br>
 <center><h3>Temas Vistos</h3>
   <a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a><br>
   <a href="lineas y listas.html" target="Principal">Listas y Líneas</a><br>
