--- a/menuu.html
+++ b/menuu.html
@@ -2,8 +2,10 @@
 <head><title>Menu</head></title>
 <body bgcolor="#CEF6E3">
 <h2><center>Menú de Daay</center></h2>
-<a href="https://akumatizados.github.io/" target="chin"><img src="gato.png" width=55 height=55 align="center"></a><br>
-  <center><h6>Akumatizados</h6></center>
+<center>
+  <a href="https://akumatizados.github.io/" target="chin"><img src="gato.png" width=55 height=55></a><br>
+    <h5>Akumatizados</h5>
+  </center>
 <center><h3>Temas Vistos</h3>
   <a href="Estructura Básica.html" target="Principal">Estructura Básica y Texto</a><br>
   <a href="lineas y listas.html" target="Principal">Listas y Líneas</a><br>
