--- a/menuu.html
+++ b/menuu.html
@@ -3,7 +3,7 @@
 <body bgcolor="#CEF6E3">
 <h2><center>Menú de Daay</center></h2>
 <center>
-  <a href="https://akumatizados.github.io/" target="Principal"><img src="gato.png" width=55 height=55></a><br>
+  <a href="https://akumatizados.github.io/" target="chin"><img src="gato.png" width=55 height=55></a><br>
     <h5>Akumatizados</h5>
   </center>
 <center><h3>Temas Vistos</h3>
