--- a/opinion.html
+++ b/opinion.html
@@ -4,6 +4,11 @@
 </head>
 <body background="fresaspin.jpg" no-reply>
 <br><br>
+  <center>
+    <video width=200 height=200 controls autoplay>
+      <source src="daay.mp4" type="video/mp4">
+    </video>
+  </center>
 <h1><center>Opinión del curso</center></h1>
 <center><font size=5 color="#154360">Comenzando con Excel, debo decir que me ha sorprendido útil que puede ser este programa. Aprendimos a utilizar fórmulas y funciones para realizar cálculos complejos de manera rápida y eficiente. Estas habilidades seguramente serán muy útiles en el futuro, tanto en el aspecto académica como profesional.<br><br>
 En cuanto a la creación de páginas web, fue divertido aprender los fundamentos del diseño y desarrollo web. Comenzamos desde cero, aprendiendo HTML, los lenguajes básicos para construir una página web. A medida que avanzamos, pudimos crear diseños atractivos y funcionales, personalizando el aspecto y la estructura de nuestras páginas. Un aspecto destacado de este semestre fue la combinación de teoría y práctica. Tuvimos la oportunidad de aplicar lo que aprendimos en clase a través de ejercicios prácticos. Esto nos ayudó a consolidar nuestros conocimientos y a desarrollar habilidades prácticas. Los desafíos que encontramos durante el proceso de aprendizaje también nos permitieron mejorar nuestra resolución de problemas y nuestra capacidad para buscar soluciones de manera independiente.<br><br>
