--- a/hachi.html
+++ b/hachi.html
@@ -2,6 +2,8 @@
 <head><title>Nana Hachi</head></title>
 <body bgcolor="#F9CFE4">
 <br><br>
-<center><img src="nana.gif" width="500" height="300" align="middle"></center>
+<center><video width=200 height=200 controls autoplay>
+<source src="daay.mp4" type="video/mp4">
+</video></center><br>
 </body>
 </html>
